<resources>
    <string name="app_name">ConcertTickets</string>
    <string name="navigate_to_admin_page_text">navigate to admin page</string>
    <string name="expired_text">Expired:</string>
    <string name="upcoming_text">Upcoming</string>
    <string name="for_you_text">For you</string>
    <string name="non_discount_text">Non - discount</string>
    <string name="discount_text">Discount</string>
    <string name="add_a_new_ticket_text">Add a new ticket</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="hans_tools">His works are notable for integrating electronic music sounds with traditional orchestral arrangements, Since the 1980s, Zimmer has composed music for over 150 films. His works include The Lion King (for which he won the Academy Award for Best Original Score in 1995), Gladiator, The Last Samurai, the Pirates of the Caribbean series, The Dark Knight trilogy, Inception, Interstellar and Dunkirk. He won a second Academy Award for Dune in 2022."</string>
    <string name="place_text">Place</string>
    <string name="quantity_text">Quantity</string>
    <string name="final_price_text">Final price</string>
    <string name="image_of_performer_text">Image of performer</string>
    <string name="name_text">Name</string>
    <string name="description_text">Description</string>
    <string name="price_text">Price</string>
    <string name="time_text">Time</string>
    <string name="save_text">Save</string>
    <string name="discount_value_text">Discount value</string>
    <string name="discount_quantity_text">Discount quantity</string>
    <string name="reset_text">Reset</string>
    <string name="admin_fragment_label">Admin</string>
    <string name="detail_fragment_label">Details</string>
    <string name="home_fragment_label">Concert tickets</string>



</resources>