<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/image_of_performer_text"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.textfield.TextInputLayout
          android:layout_marginTop="8dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:helperText="required*"
          app:helperTextTextColor="@color/red"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:hint="@string/name_text">
          
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/name_edit_text"
              android:inputType="textPersonName"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:lines="1"/>
      </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
          android:layout_marginTop="8dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          app:helperText="required*"
          app:helperTextTextColor="@color/red"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
          android:hint="@string/description_text">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/description_edit_text"
              android:inputType="textMultiLine"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:lines="5"/>
      </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:helperText="required*"
            app:helperTextTextColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/place_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/place_edit_text"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:helperText="required*"
            app:helperTextTextColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/time_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_edit_text"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:helperText="required*"
            app:helperTextTextColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/price_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_edit_text"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:helperText="required*"
            app:helperTextTextColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/quantity_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity_edit_text"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/discount_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:helperText="required*"
                    app:helperTextTextColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/name_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/discount_value_input_edit_text"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:helperText="required*"
                    app:helperTextTextColor="@color/red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="@string/name_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/discount_quantity_input_edit_text"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lines="1"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/save_text"/>






</LinearLayout>
</ScrollView>
