<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.lexneoapps.concerttickets.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_adminFragment"
            app:destination="@id/adminFragment" />
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/adminFragment"
        android:name="com.lexneoapps.concerttickets.ui.admin.AdminFragment"
        android:label="@string/admin_fragment_label"
        tools:layout="@layout/fragment_admin">
        <action
            android:id="@+id/action_adminFragment_to_createEditFragment"
            app:destination="@id/createEditFragment" />
        <action
            android:id="@+id/action_adminFragment_to_deleteFragment"
            app:destination="@id/deleteFragment" />
        <action
            android:id="@+id/action_adminFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/createEditFragment"
        android:name="com.lexneoapps.concerttickets.ui.createedit.CreateEditFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_create_edit">
        <action
            android:id="@+id/action_createEditFragment_to_adminFragment"
            app:destination="@id/adminFragment" />
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="title"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.lexneoapps.concerttickets.ui.detail.DetailFragment"
        android:label="@string/detail_fragment_label"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="discounted"
            app:argType="com.lexneoapps.concerttickets.data.local.models.Discounted"
            app:nullable="true" />
        <argument
            android:name="nonDiscounted"
            app:argType="com.lexneoapps.concerttickets.data.local.models.NonDiscounted"
            app:nullable="true" />
    </fragment>
    <dialog
        android:id="@+id/deleteFragment"
        android:name="com.lexneoapps.concerttickets.ui.delete.DeleteFragment"
        android:label="Delete" />
</navigation>