<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/image_of_performer_text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="203dp"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:elevation="4dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/performer_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:textSize="24sp"
                tools:text="Hans Zimmer" />

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:textSize="16sp"
                tools:text="His works are notable for integrating electronic music sounds with traditional orchestral arrangements, Since the 1980s, Zimmer has composed music for over 150 films. His works include The Lion King (for which he won the Academy Award for Best Original Score in 1995), Gladiator, The Last Samurai, the Pirates of the Caribbean series, The Dark Knight trilogy, Inception, Interstellar and Dunkirk. He won a second Academy Award for Dune in 2022." />

            <TextView
                android:id="@+id/place_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/place_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/place_input_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Berlin" />

            <TextView
                android:id="@+id/time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="Time"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/time_input_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="11:30 AM" />

            <TextView
                android:id="@+id/quantity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/quantity_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantity_input_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="30" />

            <TextView
                android:id="@+id/discount_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/quantity_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/discount_input_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="40%" />

            <TextView
                android:id="@+id/final_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/final_price_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/final_price_input_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="152.00e" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>